# hra-corridor-generation

./: .gitignore  Dockerfile  README.md  corridor_output.glb  corridor_output.off  corridor_pyramid_a.off  evaluation_clean.csv  lcr.sh  main.cpp  number_of_components.cpp  output_corridor.off  result.txt  run-multi.sh  run-multi1.sh  run.sh  run_api.sh  server.sh  server2.cpp  test.sh  test_post.py  tissue_mesh.off
.github/workflows/: production-api-build.yml
bashfile/: CMakeLists.txt  corridor_generator  corridor_generator-30  run-multi1.sh  run-multi2.sh  run-multi3.sh  run-multi4.sh  run-multi5.sh  run-multi6.sh  run-multi7.sh  run-multi8.sh
corridor_http_service/: CMakeLists.txt  server2.cpp
corridor_http_service/geometry/: corridor.cpp  corridor.h  mymesh.cpp
data/: rui_locations.jsonld
examples/: sample-corridor-result.glb  test-corridor.json  test_rui.json
geometry/: corridor.cpp  corridor.h  json_utils.cpp  mymesh.cpp  mymesh.h  utils.cpp  utils.h
model/: asct-b-3d-models-crosswalk.csv  asct-b-3d-models-mapping.csv  organ_origins_meter.csv  organ_origins_meter_v1.3.csv  organ_origins_meter_v1.4.csv
model/AS/VH_F_Kidney_L/: hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_F_Kidney_R/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_M_Kidney_L/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_M_Kidney_R/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/plain_with_holes/VH_M_Kidney_L/: VH_M_hilum_of_kidney_L.off  VH_M_kidney_capsule_L.off  VH_M_major_calyx_L_a.off  VH_M_major_calyx_L_b.off  VH_M_major_calyx_L_c.off  VH_M_minor_calyx_L_a.off  VH_M_minor_calyx_L_b.off  VH_M_minor_calyx_L_c.off  VH_M_minor_calyx_L_d.off  VH_M_minor_calyx_L_e.off  VH_M_minor_calyx_L_f.off  VH_M_minor_calyx_L_g.off  VH_M_minor_calyx_L_h.off  VH_M_minor_calyx_L_i.off  VH_M_outer_cortex_of_kidney_L.off  VH_M_renal_column_L.off  VH_M_renal_papilla_L_a.off  VH_M_renal_papilla_L_b.off  VH_M_renal_papilla_L_c.off  VH_M_renal_papilla_L_d.off  VH_M_renal_papilla_L_e.off  VH_M_renal_papilla_L_f.off  VH_M_renal_papilla_L_g.off  VH_M_renal_papilla_L_h.off  VH_M_renal_papilla_L_i.off  VH_M_renal_pelvis_L.off  VH_M_renal_pyramid_L_a.off  VH_M_renal_pyramid_L_b.off  VH_M_renal_pyramid_L_c.off  VH_M_renal_pyramid_L_d.off  VH_M_renal_pyramid_L_e.off  VH_M_renal_pyramid_L_f.off  VH_M_renal_pyramid_L_g.off  VH_M_renal_pyramid_L_h.off  VH_M_renal_pyramid_L_i.off
model/plain_with_holes/VH_M_Kidney_R/: VH_M_hilum_of_kidney_R.off  VH_M_kidney_capsule_R.off  VH_M_major_calyx_R_a.off  VH_M_major_calyx_R_b.off  VH_M_minor_calyx_R_a.off  VH_M_minor_calyx_R_b.off  VH_M_minor_calyx_R_c.off  VH_M_minor_calyx_R_d.off  VH_M_minor_calyx_R_e.off  VH_M_minor_calyx_R_f.off  VH_M_minor_calyx_R_g.off  VH_M_minor_calyx_R_h.off  VH_M_minor_calyx_R_i.off  VH_M_outer_cortex_of_kidney_R.off  VH_M_renal_column_R.off  VH_M_renal_papilla_R_a.off  VH_M_renal_papilla_R_b.off  VH_M_renal_papilla_R_c.off  VH_M_renal_papilla_R_d.off  VH_M_renal_papilla_R_e.off  VH_M_renal_papilla_R_f.off  VH_M_renal_papilla_R_g.off  VH_M_renal_papilla_R_h.off  VH_M_renal_papilla_R_i.off  VH_M_renal_papilla_R_j.off  VH_M_renal_pelvis_R.off  VH_M_renal_pyramid_a.off  VH_M_renal_pyramid_b.off  VH_M_renal_pyramid_c.off  VH_M_renal_pyramid_d.off  VH_M_renal_pyramid_e.off  VH_M_renal_pyramid_f.off  VH_M_renal_pyramid_g.off  VH_M_renal_pyramid_h.off  VH_M_renal_pyramid_i.off  VH_M_renal_pyramid_j.off
scripts/: glb_converter.py  glb_parser.py  send_rui_location_request_for_corridor.py
src/: CMakeLists.txt  comparison.cpp  main.cpp  point_in_polyhedron.cu  server2.cpp  test_aabbtree.cpp
src/corridor_cpu/: corridor_cpu.cpp  corridor_cpu.h
src/corridor_gpu/: GpuTimer.h  aabbtree_gpu.h  corridor.cu  corridor.cuh  corridor_with_spatial_index.cu  corridor_with_spatial_index.cuh  pip_helpers.cuh
src/geometry/: corridor.cpp  corridor.h  json_utils.h  mymesh.h  utils.cpp  utils.h
src/index/: aabbtree.h
src/restapi/: api.cpp  api.h
src/scripts/: client.py  download_data.py  glb_converter.py  report.txt  report_backup.txt
